--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "main": "./index.js",
   "dependencies": {
     "buffer-crc32": "^0.2.3",
+    "https-proxy-agent": "^1.0.0",
     "semver": "^5.0.3",
     "uuid": "^2.0.1"
   },
